:recycle: Changed the name of the binaries to real binaries name

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Add an executable for the server project
-add_executable(server Main.cpp)
+add_executable(r-type_server Main.cpp)
 
 # Link libraries or add dependencies here, if any
 # target_link_libraries(server ...)
