--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Add an executable for the client project
-add_executable(client Main.cpp)
+add_executable(r-type_client Main.cpp)
 
 # Link libraries or add dependencies here, if any
 # target_link_libraries(client ...)
