:recycle::greeen_heart: Removed need for units tests to run closes #1

--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -61,7 +61,7 @@ jobs:
   #       run: make tests_run
 
   push_to_mirror:
-    needs: [run_tests]
+    # needs: [run_tests]
 
     runs-on: ubuntu-latest
 
