:adhesive_bandage::green_heart: push_to_mirror now depends on program_compilation

--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -61,7 +61,7 @@ jobs:
   #       run: make tests_run
 
   push_to_mirror:
-    # needs: [run_tests]
+    needs: [check_program_compilation]
 
     runs-on: ubuntu-latest
 
