--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Create build directory
         run: mkdir build
+      - name: Init CMake
+        run: cd build/ && cmake ..
       - name: Compilation
         timeout-minutes: 3
         run: cmake --build ./build/ --target all
