--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,5 +4,16 @@ add_executable(server Main.cpp)
 # Set the output name for the server binary
 set_target_properties(server PROPERTIES OUTPUT_NAME "r-type_server")
 
-# Link libraries or add dependencies here, if any
-# target_link_libraries(server ...)
+# Find the SFML package (make sure SFML is installed)
+# find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+find_library(SFML_SYSTEM sfml-system)
+find_library(SFML_WINDOW sfml-window)
+find_library(SFML_GRAPHICS sfml-graphics)
+find_library(SFML_NETWORK sfml-network)
+
+target_link_libraries(server
+    ${SFML_SYSTEM}
+    ${SFML_WINDOW}
+    ${SFML_GRAPHICS}
+    ${SFML_NETWORK}
+)
