--- a/plugins/systems/move/Makefile
+++ b/plugins/systems/move/Makefile
@@ -11,7 +11,7 @@ OBJ	=	$(SRC:.cpp=.o)
 
 NAME	=	Move.so
 
-INCLUDES	= 	-I ./ -I ../ -I ../../components/position/ -I ../../../bootstrap/ -I ../../components/
+INCLUDES	= 	-I../../../
 CPP			= 	g++
 CPPFLAGS	=	-Wall -Wextra -Werror -fpic $(INCLUDES) -std=c++20
 
