--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@v4
       # - name: Create build directory
       #   run: mkdir build
+      - name: Update Fedora
+        run:  dnf update -y
       - name: Install necessary dependencies
         run:  dnf install -y          \
               g++                     \
