:green_heart: Now use fedora latest version

--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: fedora:40
+      image: fedora:latest
     # container:
     #   image: ghcr.io/ClementBaziret/custom-epitest:latest
     #   credentials:
