:green_heart: Added the compilation step

--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -49,7 +49,7 @@ jobs:
           libXcursor-devel 
           libXrandr-devel
       - name: Compilation
-        uses: actions/checkout@v4
+        run: ./build_fedora_binary.sh
       # - name: Init CMake
       #   run: cd build/ && cmake ..
       # - name: Compilation
