:recycle: Switched to fedora version 42 instead of latest to ensure the same version

--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: fedora:latest
+      image: fedora:42
     # container:
     #   image: ghcr.io/ClementBaziret/custom-epitest:latest
     #   credentials:
