--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,9 @@
 cmake_minimum_required(VERSION 3.10)
 
 # May be needed
-# set(MSVC True)
+if (WIN32)
+    set(MSVC True)
+endif (WIN32)
 # set( CMAKE_CXX_COMPILER "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.41.34120\\bin\\Hostx64\\x64\\cl.exe" )
 # set( CMAKE_C_COMPILER "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.41.34120\\bin\\Hostx64\\x64\\cl.exe" )
 
@@ -13,8 +15,22 @@ project(MyProject VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(BINARY_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/../bin)
+
 # Set the binary output directory to a custom path
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_OUTPUT_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_OUTPUT_DIR}/release)
+
+# Add some addiotionnal flags to pass to compiler
+ADD_DEFINITIONS(-g -Wall -Wextra)
+
+# Add the include directory
+include_directories(./)
+# To acces plugin include directory
+include_directories(../)
+# To allow plugin files include to work
+include_directories(../plugins)
 
 # Include the subdirectories for client and server
 add_subdirectory(client)
