:heavy_plus_sign: Added libconfig dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,20 @@ include_directories(../)
 # To allow plugin files include to work
 include_directories(../plugins)
 
+include_directories(./build/_deps/libconfig-src/lib)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+include(./cmake/CPM.cmake)
+CPMAddPackage(
+    NAME libconfig
+    GIT_REPOSITORY "https://github.com/hyperrealm/libconfig.git"
+    GIT_TAG "v1.7.3"
+    OPTIONS
+    "BUILD_EXAMPLES OFF"
+    "BUILD_TESTS OFF"
+)
+
 # Include the subdirectories for client and server
 add_subdirectory(client)
 add_subdirectory(server)
