:heavy_plus_sign: Linked libconfig library to server and client

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,15 +2,13 @@
 add_executable(client
     Main.cpp
 
-    ../DLLoader/DLLoader.cpp
     ../ECS/entity/EntityManager.cpp
     ../ECS/system/SystemManager.cpp
+    ../GameEngine/GameEngine.cpp
 )
 
 # Set the output name for the server binary
 set_target_properties(client PROPERTIES OUTPUT_NAME "r-type_client")
-
-include(../cmake/CPM.cmake)
 
 CPMAddPackage(
     NAME SFML 
@@ -20,7 +18,14 @@ CPMAddPackage(
     # "BUILD_SHARED_LIBS OFF"
 )
 
-target_link_libraries(client sfml-graphics sfml-window sfml-graphics sfml-network)
+target_link_libraries(client
+    sfml-graphics
+    sfml-window
+    sfml-graphics
+    sfml-network
+    config
+    config++
+)
 
 
 # if(SFML_ADDED)
