--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,10 +2,15 @@
 add_executable(server
     Main.cpp
 
-    ../DLLoader/DLLoader.cpp
     ../ECS/entity/EntityManager.cpp
     ../ECS/system/SystemManager.cpp
+    ../GameEngine/GameEngine.cpp
 )
 
 # Set the output name for the server binary
 set_target_properties(server PROPERTIES OUTPUT_NAME "r-type_server")
+
+target_link_libraries(server
+    config
+    config++
+)
