:white_check_mark: Added 3 test case for visible components and its necessary Makefile changes

--- a/plugins/components/visible/Makefile
+++ b/plugins/components/visible/Makefile
@@ -5,11 +5,33 @@
 ## Visible Component Makefile
 ##
 
+# Compiler
+CXX = g++
+CXXFLAGS += --std=c++20 -Wall -Wextra $(INCLUDEFLAGS) -g -Og
+
+# PKG_CONFIG
+PKG_CONFIG_LIBS := $(shell pkg-config --libs sfml-all libconfig++)
+PKG_CONFIG_CFLAGS := $(shell pkg-config --cflags sfml-all libconfig++)
+
+# Criterion library for testing
+CRITERION_LIBS = -lcriterion
+
 SRC	= 	./Visible.cpp	\
+
+# Test source files
+TEST_SRCS = 	tests/Main.cpp	\
+				../../../ECS/entity/EntityManager.cpp	\
+				../../../ECS/system/SystemManager.cpp	\
+				../../../DLLoader/DLLoader.cpp	\
 
 OBJ	=	$(SRC:.cpp=.o)
 
+# Test object files
+TEST_OBJS = $(TEST_SRCS:.cpp=.o)
+
 NAME	=	Visible.so
+
+TEST_EXEC = RType_tests
 
 INCLUDES	= 	-I../../../
 CPP			= 	g++
@@ -23,8 +45,16 @@ $(NAME):	$(OBJ)
 	@mv $(NAME) ../../bin/components/
 	@echo -e "\e[1;32m[SUCCESS] $(NAME) built\e[0m"
 
+# Linking and compiling tests
+tests: $(TEST_OBJS) $(OBJS)
+	$(CXX) $(TEST_OBJS) $(OBJS) $(PKG_CONFIG_LIBS) $(CRITERION_LIBS) -o $(TEST_EXEC)
+
+# Run tests
+tests_run: tests
+	./$(TEST_EXEC)
+
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJS) $(TEST_OBJS) $(EXEC) $(TEST_EXEC)
 
 fclean: clean
 	rm -f $(NAME)
