--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -23,8 +23,7 @@ target_link_libraries(client
     sfml-window
     sfml-graphics
     sfml-network
-    config
-    config++
+    ${LIBCONFIG_LIB_NAME}
 )
 
 
