--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -11,6 +11,5 @@ add_executable(server
 set_target_properties(server PROPERTIES OUTPUT_NAME "r-type_server")
 
 target_link_libraries(server
-    config
-    config++
+    ${LIBCONFIG_LIB_NAME}
 )
