--- a/plugins/bin/systems/configSystems.cfg
+++ b/plugins/bin/systems/configSystems.cfg
@@ -1,3 +1,15 @@
-systems = [
-    "Move",
-]
+systemsPath = "./plugins/bin/systems/";
+systems = (
+    {
+        dir = "",
+        name = "Move",
+        args = ()
+    },
+    {
+        dir = "",
+        name = "Config",
+        args = (
+            "./config/config.cfg"
+        )
+    }
+);
