:adhesive_bandage: Added some debug to see what is going on

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -5,6 +5,8 @@ add_executable(server
     ../ECS/entity/EntityManager.cpp
     ../ECS/system/SystemManager.cpp
     ../GameEngine/GameEngine.cpp
+    
+    ../Output.cpp
 )
 
 # Set the output name for the server binary
