:wrench: Fixed args in configSystems.

--- a/plugins/bin/systems/configSystems.cfg
+++ b/plugins/bin/systems/configSystems.cfg
@@ -3,13 +3,13 @@ systems = (
     {
         dir = "",
         name = "Move",
-        args = ()
+        args = {}
     },
     {
         dir = "",
         name = "Config",
-        args = (
-            "./config/config.cfg"
-        )
+        args = {
+            path = "./config/config.cfg"
+        }
     }
 );
