--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,8 +5,6 @@ cmake_minimum_required(VERSION 3.10)
 if (WIN32)
     set(MSVC True)
 endif (WIN32)
-# set( CMAKE_CXX_COMPILER "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.41.34120\\bin\\Hostx64\\x64\\cl.exe" )
-# set( CMAKE_C_COMPILER "C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.41.34120\\bin\\Hostx64\\x64\\cl.exe" )
 
 # Set the project name and version
 project(RTypePlugins VERSION 1.0)
@@ -47,6 +45,12 @@ CPMAddPackage(
     "BUILD_EXAMPLES OFF"
     "BUILD_TESTS OFF"
 )
+
+if (WIN32)
+    set(LIBCONFIG_LIB_NAME libconfig libconfig++)
+else()
+    set(LIBCONFIG_LIB_NAME config config++)
+endif (WIN32)
 
 # Include the subdirectories for client and server
 add_subdirectory(components)
