:adhesive_bandage: Fixed wrong difficulty in config file

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,7 +1,7 @@
 level = {
     name = "Forest Adventure",
     description = "A peaceful forest area with simple enemies to introduce basic game mechanics.",
-    difficulty = "Easy",
+    difficulty = "EASY",
     background_music = "forest_theme.mp3",
     cell_size = 30,
     map_size = { x = 1000, y = 10 },
