:hammer: Added new src file in the cmake list file of the client folder.

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add an executable for the client project
 add_executable(client
     Main.cpp
+    Window.cpp
 
     ../ECS/system/SystemManager.cpp
     ../GameEngine/GameEngine.cpp
