:heavy_plus_sign: Added src paths for system manager and Server Engine or Client Engine in the build paths of each plugins.

--- a/plugins/systems/move/CMakeLists.txt
+++ b/plugins/systems/move/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Add an executable for the server project
 add_library(Move SHARED
     Move.cpp
+    ../../../src/Engine/ServerEngine.cpp
+    ../../../src/ECS/system/SystemManager.cpp
 )
 
 target_link_libraries(Move
