--- a/plugins/components/position/CMakeLists.txt
+++ b/plugins/components/position/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Add an executable for the server project
 add_library(Position SHARED
     Position.cpp
+    ../../../src/Engine/ServerEngine.cpp
+    ../../../src/ECS/system/SystemManager.cpp
 )
 
 target_link_libraries(Position
