:hammer: Modified path GameEngine to be serverEngine path.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -3,7 +3,7 @@ add_executable(server
     Main.cpp
 
     ../ECS/system/SystemManager.cpp
-    ../GameEngine/GameEngine.cpp
+    ../Engine/ServerEngine.cpp
 )
 
 # Set the output name for the server binary
